# goa-Ground-of-Agnets

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .gitignore  Caddyfile  DEPLOY.md  Makefile  Procfile  README.md  docker-compose.yml  openapi.json
.claude/: launch.json
.claude/worktrees/memory-dashboard/goa-core/: pyproject.toml
.claude/worktrees/memory-dashboard/goa-core/src/goa/: __init__.py  config.py  deps.py  errors.py  main.py
.claude/worktrees/memory-dashboard/goa-core/src/goa/api/: admin.py  blobs.py  participants.py  stream.py  tasks.py
.claude/worktrees/memory-dashboard/goa-core/src/goa/domain/: models.py
.claude/worktrees/memory-dashboard/goa-core/src/goa/repos/: memory.py  persistence.py  postgres.py  protocols.py  s3_blobs.py  sqlite.py
.claude/worktrees/memory-dashboard/goa-core/tests/integration/: _helpers.py  test_admin.py  test_blobs_e2e.py  test_discovery_e2e.py  test_event_grammar_e2e.py  test_postgres_e2e.py  test_supabase_smoke.py  test_task_close_e2e.py  test_walking_skeleton.py
.claude/worktrees/memory-dashboard/goa-core/tests/unit/: _postgres_factory.py  test_auth.py  test_blob_store_contract.py  test_create_app.py  test_discovery.py  test_event_grammar.py  test_hub.py  test_memory_store_contract.py  test_openapi_snapshot.py  test_pending_questions.py  test_subtasks.py
examples/: README.md  _shared.py
goa-sdk/: pyproject.toml
goa-sdk/src/goa_sdk/: __init__.py  _stream.py  client.py  events.py  models.py
goa-sdk/tests/: test_discovery.py  test_event_grammar.py  test_idempotency.py  test_memory.py  test_subtasks.py  test_upsert.py
specs/: goa.md  (+1 more)
(+149 files in other folders)
