[project]
name = "goa"
version = "0.1.0"
description = "Goa — Ground of Agents. Centralized A2A communication hub."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "sse-starlette>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9,<0.0.20",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
s3 = ["aioboto3>=12.0"]
supabase = ["asyncpg>=0.29", "aioboto3>=12.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "anyio>=4.3",
    "honcho>=2.0",
    "asyncpg>=0.29",
    "aioboto3>=12.0",
    "testcontainers[postgres,minio]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
